Migrated over some of the .html files. Still need to do some more fixes. -BC

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<title>Bennett Clayton</title>
+</head>
+
+<body>
+
+<h2>Bennett Clayton, PhD Student</h2>
+<p><b>Office:</b> Blocker 507A<br>
+<b>E-mail:</b> bgclayto [AT] tamu.edu
+</p>
+
+<h3>Publications</h3>
+<ul>
+	<li><a href="https://hal.archives-ouvertes.fr/hal-03224638">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State (In review)</a>
+</ul>
+
+
+<h3>Education</h3>
+<ul>
+<li>B.S., Mathematics, University of North Carolina Charlotte, 2011</li>
+<li>M.S., Mathematics, University of North Carolina Charlotte, 2013</li>
+<li>Ph.D., Mathematics, Texas A&M, In progress</li>
+</ul>
+
+<!--
+<h3>CV</h3>
+<a href="CV/cv_bennett_clayton.pdf">CV</a>
+-->
+
+<h3>Advisor</h3>
+<a href="https://www.math.tamu.edu/~popov/">Dr. Popov</a>
+
+<h3>Numerical Qualifier Solutions</h3>
+<a href="qualifiers.html">Solutions</a>
+
+<h3>Conservation Law Notes</h3>
+<a href="./pdfs/conservation_law_notes.pdf">Conservation Law Notes</a>
+
+<h3>Research Interests</h3>
+<ul>
+<li>Fast Algorithms</li>
+<li>Numerical Methods for PDEs</li>
+<li>Fluid Mechanics (Euler equations)</li>
+<li>PDEs</li>
+<li>Conservation Laws</li>
+</ul>
+
+<h3>Teaching (Recitation/Lab)</h3>
+<ul>
+<!-- <li><a href="math442_2019a/math442.html">MATH 442-930 August 2019</a></li> -->
+<li><a href="math417_2019s/math417_new.html">MATH 417-504 Spring 2019</a></li> 
+<li><a href="math151_2018s/math152.html">MATH 152 Spring 2018</a></li>
+<li><a href="math151_2017f/math151.html">MATH 151 - 555, 556, 557 Fall 2017</a></li>
+</ul>
+
+<h3>Useful Links</h3>
+<a href="./useful_links/useful_links.html">Useful Links</a>
+
+
+
+<!-- Keep the next 2 lines -->
+
+
+</body></html>
+
