Brought over the numerical qual solutions and tex files. -BC

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <a href="qualifiers.html">Solutions</a>
 
 <h3>Conservation Law Notes</h3>
-<a href="./pdfs/conservation_law_notes.pdf">Conservation Law Notes</a>
+<a href="pdfFiles/conservation_law_notes.pdf">Conservation Law Notes</a>
 
 <h3>Research Interests</h3>
 <ul>
@@ -57,7 +57,7 @@
 </ul>
 
 <h3>Useful Links</h3>
-<a href="./useful_links/useful_links.html">Useful Links</a>
+<a href="useful_links.html">Useful Links</a>
 
 
 
