--- a/qualifiers.html
+++ b/qualifiers.html
@@ -12,13 +12,13 @@ problems.
 <br>
 <br>
 
-<a href="qual_solutions/j2009.pdf">Jan 2009</a> (Last updated: July, 7th 2021)
-<br><a href="qual_solutions/a2009.pdf">Aug 2009</a>(Last updated: July, 14th 2021)
-<br><a href="qual_solutions/j2010.pdf">Jan 2010</a>(Last updated: July, 19th 2021)
-<br><a href="qual_solutions/j2011.pdf">Jan 2011</a>(Last updated: July, 19th 2021)
-<br><a href="qual_solutions/a2011.pdf">Aug 2011</a>(Last updated: July, 28th 2021)
-<br><a href="qual_solutions/j2012.pdf">Jan 2012</a>
-<br><a href="qual_solutions/a2012.pdf">Aug 2012</a>(Last updated: August, 5th 2021)
-<br><a href="qual_solutions/j2013.pdf">Jan 2013</a>
-<br><a href="qual_solutions/a2015.pdf">Aug 2015</a>
-<br><a href="qual_solutions/a2017.pdf">Aug 2017</a>(Last updated: August, 5th 2021)
+<a href="pdfFiles/jan2009.pdf">Jan 2009</a> (Last updated: July, 7th 2021)
+<br><a href="pdfFiles/aug2009.pdf">Aug 2009</a>(Last updated: July, 14th 2021)
+<br><a href="pdfFiles/jan2010.pdf">Jan 2010</a>(Last updated: July, 19th 2021)
+<br><a href="pdfFiles/jan2011.pdf">Jan 2011</a>(Last updated: July, 19th 2021)
+<br><a href="pdfFiles/aug2011.pdf">Aug 2011</a>(Last updated: July, 28th 2021)
+<br><a href="pdfFiles/jan2012.pdf">Jan 2012</a>
+<br><a href="pdfFiles/aug2012.pdf">Aug 2012</a>(Last updated: August, 5th 2021)
+<br><a href="pdfFiles/jan2013.pdf">Jan 2013</a>
+<br><a href="pdfFiles/aug2015.pdf">Aug 2015</a>
+<br><a href="pdfFiles/aug2017.pdf">Aug 2017</a>(Last updated: August, 5th 2021)
