--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <h3>Advisor</h3>
 <a href="https://www.math.tamu.edu/~popov/">Dr. Popov</a>
 
+<h3>Simulations</h3>
+
 <h3>Numerical Qualifier Solutions</h3>
 <a href="qualifiers.html">Solutions</a>
 
