--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<li><a href="https://hal.archives-ouvertes.fr/hal-03224638">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State (In review)</a>
 </ul>
 
+<h3>Simulations</h3>
+<a href="simulations.html">Simulations</a>
+	
+
 
 <h3>Education</h3>
 <ul>
