Trying to get github to update. -BC

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<li><a href="https://hal.archives-ouvertes.fr/hal-03224638">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State (In review)</a>
 </ul>
 
+test...
+
 <h3>Simulations</h3>
 <a href="simulations.html">Simulations</a>
 	
