--- a/simulations.html
+++ b/simulations.html
@@ -11,7 +11,7 @@ The material passes through the tube and into the right tank.
 We show a comparison between the van der Waals and ideal equations of state.
 Simulation details are given below.
 
-<p><a href="https://youtu.be/EPhgtGauiQU">Two Tanks Problem</a></p>
+<p><a href="https://youtu.be/todvZwfX35c">Two Tanks Problem</a></p>
 
 <p><b>Geometry:</b> \( \{(-3,-1) \times (-1,1)\} \cup \{(-1,1)\times (-0.1,0.1) \} \cup \{(1,3)\times (-1,1)\} \)</p>
 <p><b>Boundary Conditions:</b> The slip boundary condition (\(\boldsymbol{u} \cdot \boldsymbol{n} = 0 \)) is enforced on all sides.
