Restructured simulations page. -BC

--- a/2d_simulations.html
+++ b/2d_simulations.html
@@ -4,7 +4,7 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <body>
-<h3>Two Tanks Problem</h3>
+<h3 style="font-size:150%">Two Tanks Problem</h3>
 In this problem, we solve a Riemann-like problem where two square domains are connected by a small tube. 
 The initial states begin at rest with high pressure and density in the left tank. 
 The material passes through the tube and into the right tank.
@@ -21,5 +21,31 @@ Simulation details are given below.
 <p><b>Equation of state:</b> van der Waals: \[ p(\rho, e) = (\gamma-1) \frac{\rho e + a\rho^2}{1 - b\rho} - a \rho^2 \] </p>
 <p><b>Parameters</b>: \(\gamma = 1.4, a = 0.3215, b = 0.1\). </p>
 <p><b>Software</b>: Ryujin (put citation here.)</p>
+
+
+<h3 style="font-size:150%">Isentropic Vortex</h3>
+<p>An analytic solution to the Euler equations can be derived by assuming the flow is isentropic (constant entropy) and divergence free (\(\nabla \cdot \boldsymbol{v} = 0)\).
+An ansantz solution is prescribed to the velocity and the derivation follows.
+A detailed derivation can be found here: (<i>Put a link here</i>).
+</p>
+
+<h3 style="font-size:150%">Mach 10 Double Reflection</h3>
+<p> <i> Coming soon... </i>
+
+<h3 style="font-size:150%">Mach 3 Cylinder</h3>
+<p> <i> Coming soon... </i>
+
+<h3 style="font-size:150%">Mach 3 Step</h3>
+<p> <i> Coming soon... </i>
+
+<h3 style="font-size:150%">Shock Hitting Triangle</h3>
+<p> <i> Coming soon... </i>
+
+<h3 style="font-size:150%">Shock Expansion Around Corner</h3>
+<p> <i> Coming soon... </i>
+
+<h3 style="font-size:150%">3D Shock Tube with Partially Ruptured Diaphram</h3>
+<p> <i> Coming soon... </i>
+
 </body>
 </html>
