--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
 
 <h3>Simulations</h3>
-<a href="simulations.html">Simulations</a>
+<a href="sim_categories.html">Simulations</a>
 	
 <h3>Education</h3>
 <ul>
