Updated the simulations some more.

--- a/1d_simulations.html
+++ b/1d_simulations.html
@@ -1,10 +1,14 @@
+<html>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 <body>
 	<h3 style="font-size:150%">Sod Shock Tube</h3>
 	<p> <i>Write explanation here</i> </p>
 
 	<ul>
-	<li>Domain: ... </li>
-	<li>Initial State: ...</li>
+		<li><b>Domain:</b> \( [-1,1] \) </li>
+		<li><b>Initial State:</b> \( (\rho_L, v_L, p_L) = (...) \) and \( (\rho_L, v_L, p_L) = (...) \) </li>
 	<li>...</li>
 	</ul>
 
@@ -18,3 +22,5 @@
 	<li>...</li>
 	</ul>
 </body>
+
+</html>
