--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<link rel="stylesheet" href="index.css">
 <title>Bennett Clayton</title>
 </head>
-
 <body>
 
 <h2>Bennett Clayton, PhD Student</h2>
@@ -14,7 +13,7 @@
 
 <h3>Publications</h3>
 <ul>
-	<li><a href="https://hal.archives-ouvertes.fr/hal-03224638">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State (In review)</a>
+	<li><a href="https://epubs.siam.org/doi/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
 </ul>
 
 <h3>Simulations</h3>
