Added website link and airfoil link.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <h3>Conservation Law Notes</h3>
 <a href="pdfFiles/conservation_law_notes.pdf">Conservation Law Notes</a>
 
+<h3>Youtube Channel</h3>
+<a href="https://www.youtube.com/channel/UCINxLZmfo2CuVbncAP8OhCg">clayton89</a>
+
 <h3>Research Interests</h3>
 <ul>
 <li>Fast Algorithms</li>
