Updated aug2017 qual solutions.

--- a/useful_links.html
+++ b/useful_links.html
@@ -10,10 +10,10 @@
 <h2>Useful Links</h2>
 
 
-<h2>Papers</h2>
+<h2>Papers and Notes</h2>
 <ol>
 <li><a href="https://www.cs.cmu.edu/~quake-papers/painless-conjugate-gradient.pdf">Painless Conjugate Gradient Method</a></li>
-
+<li><a href="http://www.clawpack.org/riemann_book/html/Euler_Tammann.html">Euler equations with Tammann EOS</a></li>
 </ol>
 
 <h2> Websites </h2>
