Updated the aug2017 with xin su's problem and added some links.

--- a/qualifiers.html
+++ b/qualifiers.html
@@ -2,7 +2,7 @@
 
 These solutions may have mistakes, typos, or even incorrect solutions. 
 Send me an email if you happen to find any such mistakes. 
-Some the solutions were originally from Yanbo Li and recently, I have worked worth Eric Tovar to clean up and correct these solutions (as of Aug 5th, 2020).
+Some the solutions were originally from <b>Yanbo Li</b>. Further contributions have been made by <a href="https://ejtovar.github.io">Eric Tovar</a> and <a href="https://sites.google.com/view/xinsu-ariel/home">Xin Su</a> to correct and clean up solutions.
 Still, some of the exam solutions are incomplete or have mistakes; some day I will eventually correct this issue.
 
 I personally used the textbook "Numerical Treatment of Partial
@@ -21,4 +21,4 @@ problems.
 <br><a href="pdfFiles/aug2012.pdf">Aug 2012</a>(Last updated: August, 5th 2021)
 <br><a href="pdfFiles/jan2013.pdf">Jan 2013</a>
 <br><a href="pdfFiles/aug2015.pdf">Aug 2015</a>
-<br><a href="pdfFiles/aug2017.pdf">Aug 2017</a>(Last updated: August, 5th 2021)
+<br><a href="pdfFiles/aug2017.pdf">Aug 2017</a>(Last updated: July, 7th 2022)
