Updated publications and delete teaching stuff.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <h3>Publications</h3>
 <ul>
-	<li><a href="https://epubs.siam.org/doi/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
+<li><a href="https://epubs.siam.org/doi/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
+<li><a href="https://arxiv.org/abs/2207.12832">(ArXiv) Robust Second-Order Approximation of the Compressible Euler Equations with an Arbitrary Equation of State</a>
 </ul>
 
 <h3>Simulations</h3>
@@ -45,19 +46,10 @@
 
 <h3>Research Interests</h3>
 <ul>
-<li>Fast Algorithms</li>
 <li>Numerical Methods for PDEs</li>
 <li>Fluid Mechanics (Euler equations)</li>
-<li>PDEs</li>
 <li>Conservation Laws</li>
-</ul>
-
-<h3>Teaching (Recitation/Lab)</h3>
-<ul>
-<!-- <li><a href="math442_2019a/math442.html">MATH 442-930 August 2019</a></li> -->
-<li><a href="math417_2019s/math417_new.html">MATH 417-504 Spring 2019</a></li> 
-<li><a href="math151_2018s/math152.html">MATH 152 Spring 2018</a></li>
-<li><a href="math151_2017f/math151.html">MATH 151 - 555, 556, 557 Fall 2017</a></li>
+<li>Fast Algorithms</li>
 </ul>
 
 <h3>Useful Links</h3>
