--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <b>E-mail:</b> bgclayto [AT] tamu.edu
 </p>
 
+<h3>Resume</h3>
+<li><a href="pdfFiles/resume.pdf">Resume</a></li>
+
 <h3>Publications</h3>
 <ul>
 <li><a href="https://epubs.siam.org/doi/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
