Added pdf file.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h3>Publications</h3>
 <ul>
-<li><a href="https://epubs.siam.org/doi/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
+<li><a href="pdfFiles/clayton_guermond_popov_2022.pdf">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
 <li><a href="https://arxiv.org/abs/2207.12832">(ArXiv) Robust Second-Order Approximation of the Compressible Euler Equations with an Arbitrary Equation of State</a>
 </ul>
 
