--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </p>
 
 <h3>Resume</h3>
-<li><a href="pdfFiles/resume.pdf">Resume</a></li>
+<li><a href="pdfFiles/claytonCV.pdf">Resume</a></li>
 
 <h3>Publications</h3>
 <ul>
@@ -25,9 +25,9 @@
 	
 <h3>Education</h3>
 <ul>
-<li>B.S., Mathematics, University of North Carolina Charlotte, 2011</li>
-<li>M.S., Mathematics, University of North Carolina Charlotte, 2013</li>
 <li>Ph.D., Mathematics, Texas A&M, In progress</li>
+<li>M.S., Mathematics, University of North Carolina Charlotte, 2013</li>
+<li>B.S., Mathematics, University of North Carolina Charlotte, 2011</li>
 </ul>
 
 <!--
@@ -51,6 +51,7 @@
 <ul>
 <li>Numerical Methods for PDEs</li>
 <li>Fluid Mechanics (Euler equations)</li>
+<li>Lagrangian Hydrodynamics</li>
 <li>Conservation Laws</li>
 <li>Fast Algorithms</li>
 </ul>
