Added notes on euler to lag.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 <h3>Numerical Qualifier Solutions</h3>
 <a href="qualifiers.html">Solutions</a>
 
-<h3>Conservation Law Notes</h3>
-<a href="pdfFiles/conservation_law_notes.pdf">Conservation Law Notes</a>
+<h3>Notes</h3>
+<a href="pdfFiles/conservation_law_notes.pdf">Conservation Law Notes</a><br>
+<a href="pdfFiles/EulerToLag.pdf">Eulerian to Lagrangian Note</a>
 
 <h3>Youtube Channel</h3>
 <a href="https://www.youtube.com/channel/UCINxLZmfo2CuVbncAP8OhCg">clayton89</a>
