Updated webpage and cv with published paper.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h3>Publications</h3>
 <ul>
 <li><a href="https://epubs.siam.org/doi/abs/10.1137/21M1414097">Invariant Domain Preserving Approximations for the Euler Equations with Tabulated Equation of State</a>
-<li><a href="https://arxiv.org/abs/2207.12832">(ArXiv) Robust Second-Order Approximation of the Compressible Euler Equations with an Arbitrary Equation of State</a>
+<li><a href="https://www.sciencedirect.com/science/article/pii/S0021999123000219">Robust Second-Order Approximation of the Compressible Euler Equations with an Arbitrary Equation of State</a>
 </ul>
 
 <h3>Simulations</h3>
@@ -26,8 +26,8 @@
 <h3>Education</h3>
 <ul>
 <li>Ph.D., Mathematics, Texas A&M, In progress</li>
-<li>M.S., Mathematics, University of North Carolina Charlotte, 2013</li>
-<li>B.S., Mathematics, University of North Carolina Charlotte, 2011</li>
+<li>M.S., Mathematics, University of North Carolina Charlotte</li>
+<li>B.S., Mathematics, University of North Carolina Charlotte</li>
 </ul>
 
 <!--
